--- a/CATZ/Apps/Aplicacion1/static/viajes.css
+++ b/CATZ/Apps/Aplicacion1/static/viajes.css
@@ -30,3 +30,87 @@ body{
     height: 80%;
     border-radius: 10px;
     }
+
+.container{
+    position: absolute;
+    top: 20%;
+    right: 2%;
+    width: 400px;
+    height: 105px;
+    margin-left: 40px;
+    background: #fff;
+    padding: 28px 32px;
+    overflow: hidden;
+    border-radius: 18px;
+    font-family: "poppins", sans-serif;
+    transition: 0.6s ease-out;
+}
+
+.pointer {
+    position: relative;
+}
+
+.pointer p {
+    text-align: center;
+    color: #06283D;
+    font-size: 20px;
+}
+
+.aqi-box span{
+    width: 100%;
+    height: min-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.aqi-box{
+    text-align: center;
+}
+
+.aqi-box img{
+    width: 60%;
+    margin-top: 30px;
+}
+
+.aqi-box .temperature{
+    position: relative;
+    color: #06283D;
+    font-size: 4rem;
+    font-weight: 800;
+    margin-top: 30px;
+    margin-left: -16px;
+}
+
+.aqi-box .temperature span{
+    position: absolute;
+    margin-left: 4px;
+    font-size: 1.5rem;
+}
+
+.aqi-box .description{
+    color: #06283D;
+    font-size: 22px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.not-found{
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+    scale: 0;
+    opacity: 0;
+    display: none;
+}
+
+.not-found img{
+    width: 70%;
+}
+
+.not-found p{
+    color: #06283D;
+    font-size: 22px;
+    font-weight: 500;
+    margin-top: 12px;
+}
