--- a/CATZ/Apps/Aplicacion1/templates/profile.html
+++ b/CATZ/Apps/Aplicacion1/templates/profile.html
@@ -13,13 +13,15 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
     type="text/css">
+
 </head>
     <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <link rel="stylesheet" href="{% static '/perfil.css' %}">              
-    <link rel="stylesheet" href="{% static '/widget_perfil.css' %}">                          
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Agbalumo:400,700&display=swap">
+    <link rel="stylesheet" href="{% static '/widget_perfil.css' %}">
+    <link rel="stylesheet" href="{% static '/estilos.css' %}">                     
 </head>
 <body>
     <div id="map" class="map"></div>
