Actualización del Profile

--- a/CATZ/Apps/Aplicacion1/templates/profile.html
+++ b/CATZ/Apps/Aplicacion1/templates/profile.html
@@ -13,48 +13,45 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" 
     type="text/css">
-
 </head>
-    <body>
+
+<body>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Agbalumo:400,700&display=swap">
     <link rel="stylesheet" href="{% static '/widget_perfil.css' %}">
     <link rel="stylesheet" href="{% static '/estilos.css' %}">                     
-</head>
-<body>
+
     <div id="map" class="map"></div>
 
     <div id="geocoder" class="geocoder"></div>
+    
+    <div class="bloque">
+        {% if direcciones %}
+            <h2>Direcciones almacenadas:</h2>
+            <ul>
+                {% for direccion in direcciones %}
+                    <li>
+                        <strong>Dirección:</strong> {{ direccion.direccion }}<br>
+                        <strong>AQI:</strong> {{ direccion.aqi }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No se encontraron direcciones almacenadas.</p>
+        {% endif %}
+    </div>
 
     <button class="boton" onclick="guardarYRecargar()">
         Guardar Ubicacion
     </button>
-    
     
     <script>
         function guardarYRecargar() {
             window.location.href = '{% url "profile" %}';
         }
     </script>
-
-    <div class="direccion">
-        <samp>{{u}}</samp>
-    </div>
-
-    <div class="direcciones">
-        {% for direccion in direcciones %}
-
-            <h1 class="texto">
-            
-                {{ direccion }}
-
-            </h1>
-
-        {% endfor %}
-    </div>
-
 
     <script>
         $(function() {
