--- a/CATZ/Apps/Aplicacion1/static/widget_perfil.css
+++ b/CATZ/Apps/Aplicacion1/static/widget_perfil.css
@@ -1,4 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
+*   {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins",sans-serif;
+}
+
+.bloque{
+    background-color: transparent;
+    backdrop-filter: blur(18px);
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 12px;
+    color: #fff;
+    padding: 20px;
+    text-align: left;
+    max-width: 280px;
+    width: 100%;
+    margin-left: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: absolute;
+    left: 10%; 
+    top: 50%;
+    transform: translate(-50%, -50%); 
+}
 
 .map{
     position: absolute;
@@ -8,7 +36,7 @@
     width: 50%;
     height: 50%;
     border-radius: 10px;
-    }
+}
 
 .geocoder {
     position: absolute;
@@ -18,13 +46,11 @@
     margin-left: -25%;
     top: 23%;
     border-radius: 10px;
-
 }
 
 .mapboxgl-ctrl-geocoder {
     min-width: 80%;
     border-radius: 10px;
-
 }
 
 .boton{
@@ -48,7 +74,7 @@
 }
 
 .boton:hover{
-color:#74263f
+    color:#74263f
 }
 
 .boton::before{
@@ -65,7 +91,6 @@ color:#74263f
 
 .boton:hover:before{
     width: 100%;
-
 }
 
 .titulo {
